Update Swagger API documentation
